--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,12 @@
         }
     ],
     "require": {
-        "php": "^7.1",
+        "php": "^7.2.5",
         "cloudinary/cloudinary_php": "^1.18",
-        "illuminate/support": "^6.0"
+        "illuminate/support": "^7.0|^8.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^4.0",
+        "orchestra/testbench": "^4.8.0|^5.0",
         "phpunit/phpunit": "^8.0"
     },
     "autoload": {
